--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,3 +7,9 @@ optIn.breaksInsideChains = true
 docstrings.blankFirstLine = yes
 rewrite.scala3.convertToNewSyntax = true
 rewrite.scala3.removeOptionalBraces = yes
+# Add a new line before case class
+newlines.topLevelStatementBlankLines = [
+  {
+    blanks { after = 1 }
+  }
+]
