CTOO-129: Add issue labler CI (#32)
https://treasure-data.atlassian.net/browse/CTOO-129

--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -6,6 +6,7 @@ permissions:
 
 jobs:
   approve_pr:
+    name: Approve Bot PRs
     runs-on: ubuntu-latest
     # Scala Steward runs with td-scala-steward user
     if: ${{ github.actor == 'td-scala-steward' || github.actor == 'dependabot[bot]' }}
