--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,24 +1,55 @@
-name: Release Drafter
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
+categories:
+  - title: '🔥 Breaking Changes'
+    labels:
+      - 'breaking'
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'bug'
+  - title: '👋 Deprecated'
+    labels:
+      - 'deprecation'
+  - title: '🔗 Dependency Updates'
+    labels:
+      - 'library-update'
+      - 'dependencies'
+  - title: '🛠  Internal Updates'
+    labels:
+      - 'internal'
+      - 'kaizen'
+      - 'test-library-update'
+      - 'sbt-plugin-update'
+  - title: '📚 Docs'
+    labels:
+      - 'doc'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 
-on:
-  # pull_request event is required only for autolabeler
-  pull_request:
-    # Only following types are handled by the action, but one can default to all as well
-    types: [opened, reopened, synchronize]
-  
-permissions:
-  contents: read
+template: |
+  ## What's Changed
 
-jobs:
-  update_PR_labels:
-    permissions:
-      contents: read
-      # write permission is required for autolabeler
-      # otherwise, read permission is required at least
-      pull-requests: write
-    runs-on: ubuntu-latest
-    steps:
-      # Runs only pull-request labeler
-      - uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  $CHANGES
+
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
+
+
+autolabeler:
+  - label: 'doc'
+    files:
+      - '*.md'
+  - label: 'feature'
+    title:
+      - '/(support|feature)/i'
+  - label: 'bug'
+    title:
+      - '/fix/i'
+  - label: 'internal'
+    title:
+      - '/internal/i'
+  - label: 'deprecation'
+    title:
+      - '/deprecate/i'
