CTOO-140 (internal): Cache ~/.ivy2/cache for faster Scala.js CI (#62)
https://treasure-data.atlassian.net/browse/CTOO-140

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,9 +49,11 @@ jobs:
         id: cache-scalablytyped
         uses: actions/cache@v4
         with:
-          key: ${{ runner.os }}-scalablytyped
+          key: ${{ runner.os }}-scalablytyped-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-scalablytyped-node-
           path: |
             ~/.ivy2/local
+            ~/.ivy2/cache
             ~/.sbt
             ~/.cache
       - uses: actions/setup-java@v4
