CTOO-285 (internal): Add newline before multiline blocks (#175)
https://treasure-data.atlassian.net/browse/CTOO-285

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,7 @@
 version = 3.8.2
 project.layout = StandardConvention
 runner.dialect = scala3
-maxColumn = 120
+maxColumn = 100
 style = defaultWithAlign
 optIn.breaksInsideChains = true
 docstrings.blankFirstLine = yes
@@ -13,3 +13,4 @@ newlines.topLevelStatementBlankLines = [
     blanks { after = 1 }
   }
 ]
+newlines.beforeMultiline = unfold
