CTOO-286 (internal): Reformat with newlines.source = unfold (#176)
https://treasure-data.atlassian.net/browse/CTOO-286

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,7 +3,6 @@ project.layout = StandardConvention
 runner.dialect = scala3
 maxColumn = 100
 style = defaultWithAlign
-optIn.breaksInsideChains = true
 docstrings.blankFirstLine = yes
 rewrite.scala3.convertToNewSyntax = true
 rewrite.scala3.removeOptionalBraces = yes
@@ -13,4 +12,4 @@ newlines.topLevelStatementBlankLines = [
     blanks { after = 1 }
   }
 ]
-newlines.beforeMultiline = unfold
+newlines.source = unfold
