CTOO-318 (internal): Add end marker for 30+ line block (#198)
https://treasure-data.atlassian.net/browse/CTOO-318

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,6 +6,7 @@ style = defaultWithAlign
 docstrings.blankFirstLine = yes
 rewrite.scala3.convertToNewSyntax = true
 rewrite.scala3.removeOptionalBraces = yes
+rewrite.scala3.insertEndMarkerMinLines = 30
 # Add a new line before case class
 newlines.topLevelStatementBlankLines = [
   {
@@ -13,3 +14,4 @@ newlines.topLevelStatementBlankLines = [
   }
 ]
 newlines.source = unfold
+
