--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -8,7 +8,7 @@ jobs:
     if: ${{ github.actor == 'xerial-bot' || github.actor == 'dependabot[bot]' }}
     steps:
       - name: Generate token
-      - uses: actions/create-github-app-token@v1
+        uses: actions/create-github-app-token@v1
         id: app-token
         with:
           app-id: ${{ secrets.APP_ID }}
