--- a/wvlet-ui-main/package.json
+++ b/wvlet-ui-main/package.json
@@ -13,6 +13,7 @@
     "rollup": "^4.21.0"
   },
   "devDependencies": {
+    "jsdom": "^24.0.0",
     "@rollup/plugin-replace": "^5.0.7",
     "typescript": "^5.5.4",
     "vite": "^5.4.2"
