--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,6 +66,8 @@ jobs:
           node-version: '18'
           cache: npm
           cache-dependency-path: ./wvlet-ui-main/package-lock.json
+      - name: Install npm dependencies for testing wvlet-ui
+        run: npm install
       - name: Install npm dependencies for ui-main
         run: npm install
         working-directory: ./wvlet-ui-main
