--- a/wvlet-ui-main/package.json
+++ b/wvlet-ui-main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wvlet-ui",
+  "name": "wvlet-ui-main",
   "private": true,
   "type": "module",
   "version": "0.0.0",
@@ -13,7 +13,6 @@
     "rollup": "^4.21.0"
   },
   "devDependencies": {
-    "jsdom": "^24.0.0",
     "@rollup/plugin-replace": "^5.0.7",
     "typescript": "^5.5.4",
     "vite": "^5.4.2"
