doc: Update README (#10)
- **Add examples**
- **add log files**

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
           node-version: '18'
           cache: npm
           cache-dependency-path: ./wvlet-ui-main/package-lock.json
-      - name: Install npm dependencies for root
+      - name: Install npm dependencies for testing wvlet-ui
         run: npm install
       - name: Install npm dependencies for ui-main
         run: npm install
