internal: Manage Docusaurus dependencies with dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,7 @@ updates:
     directory: "/wvlet-ui-main"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/website"
+    schedule:
+      interval: "weekly"
