--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
   code_format:
     name: Code format
     needs: changes
-    if: needs.changes.outputs.src == 'true'
+    if: ${{ needs.changes.outputs.src == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
   test_scala_3:
     name: Scala 3
     needs: changes
-    if: needs.changes.outputs.src == 'true'
+    if: ${{ needs.changes.outputs.src == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -61,7 +61,7 @@ jobs:
   test_js:
     name: Scala.js
     needs: changes
-    if: needs.changes.outputs.src == 'true'
+    if: ${{ needs.changes.outputs.src == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
