--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
               - '**.conf'
               - '**.json'
               - '**.wv'
+              - SCALA_VERSION
   code_format:
     name: Code format
     needs: changes
