--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   release:
+    if: startsWith(github.ref, 'refs/tags/v')
     name: Create a new release
     runs-on: ubuntu-latest
     env:
@@ -17,7 +18,6 @@ jobs:
         # We need to fetch all tags to get the latest tag
         with:
          fetch-depth: 0
-      - if: startsWith(github.ref, 'refs/tags/v')
         name: Create a release note
         run: |
           gh release view "$GITHUB_REF_NAME" --repo="$GITHUB_REPOSITORY" | \
@@ -36,8 +36,7 @@ jobs:
           VERSION=${GITHUB_REF_NAME#v}
           echo Version: $VERSION
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-      - if: startsWith(github.ref, 'refs/tags/v')
-        name: Upload wvlet-cli-(version).tgz to GitHub release
+      - name: Upload wvlet-cli-(version).tgz to GitHub release
         run: |
           gh release upload "$GITHUB_REF_NAME" "wvlet-cli/target/wvlet-cli-${VERSION}.tar.gz" \
           --clobber --repo="$GITHUB_REPOSITORY"
@@ -62,7 +61,9 @@ jobs:
             git config --global push.default simple
         - name: Update VERSION
           run: |
-            echo "${GITHUB_REF_NAME#v}" > VERSION
+            VERSION=${GITHUB_REF_NAME#v}
+            echo Version: $VERSION
+            echo $VERSION > VERSION
             git add VERSION
             git diff-index --quiet --cached HEAD || git commit -am "New release for wvlet ${VERSION}"
             echo "VERSION=$VERSION" >> $GITHUB_ENV
