--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,8 @@ jobs:
           git add VERSION
           git diff-index --quiet --cached HEAD || git commit -am "New release for wvlet ${VERSION}"
           git push --set-upstream origin releases/${{ github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
       - name: Create a PR to update version
         run: |
           gh pr create --repo="wvlet/homebrew-wvlet" \
