--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: wvlet/homebrew-wvlet
+          token: '${{ steps.app-token.outputs.token }}'
       - name: Setup git
         run: |
           git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
@@ -80,8 +81,6 @@ jobs:
           git add VERSION
           git diff-index --quiet --cached HEAD || git commit -am "New release for wvlet ${VERSION}"
           git push --set-upstream origin releases/${{ github.ref_name }}
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
       - name: Create a PR to update version
         run: |
           gh pr create --repo="wvlet/homebrew-wvlet" \
