--- a/wvlet-ui-main/package.json
+++ b/wvlet-ui-main/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^6.0.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
     "vite": "^5.4.8"
   }
