--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,6 +95,8 @@ jobs:
         working-directory: ./wvlet-ui-main
       - name: Scala.js test
         run: JVM_OPTS=-Xmx4g ./sbt "projectJS/test"
+      - name: Packaging wvlet-cli
+        run: JVM_OPTS=-Xmx4g ./sbt "cli/packArchiveTgz"
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v4
         if: always() # always run even if the previous step fails
