--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,3 +105,26 @@ jobs:
           check_name: Test Report Scala.js
           annotate_only: true
           detailed_summary: true
+  test_native:
+    name: Scala Native
+    needs: changes
+    if: ${{ needs.changes.outputs.src == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '23'
+          cache: sbt
+      - name: Scala Native test
+        # TODO: Run Native tests #447
+        run: ./sbt projectNative/compile
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v5
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: '**/target/test-reports/TEST-*.xml'
+          check_name: Test Report Scala Native
+          annotate_only: true
+          detailed_summary: true
