--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,8 +118,7 @@ jobs:
           java-version: '23'
           cache: sbt
       - name: Scala Native test
-        # TODO: Run Native tests #447
-        run: ./sbt projectNative/compile
+        run: ./sbt projectNative/test
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v5
         if: always() # always run even if the previous step fails
