--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -42,6 +42,6 @@ jobs:
           java-version: '23'
           cache: sbt
       - name: Build Linux Arm64
-        run: ./docker/dockcross-arm64 -a --rm bash -c "sudo apt-get install -y openjdk-17-jdk; ./sbt 'wvc-linux-arm64/nativeLink'"
+        run: ./docker/dockcross-arm64 -a --rm bash -c "sudo apt-get install -y openjdk-17-jdk clang libstdc++-12-dev; ./sbt 'wvc-linux-arm64/nativeLink'"
         env:
           OCI_EXE: docker
