--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -33,7 +33,19 @@ jobs:
     name: Cross build with Scala Native
     needs: changes
     if: ${{ needs.changes.outputs.src == 'true' }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.config.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-latest
+            arch: arm64
+          - os: ubuntu-latest
+            arch: arm64
+          - os: ubuntu-latest
+            arch: x64
+          - os: windows-latest
+            arch: x64
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -41,8 +53,6 @@ jobs:
           distribution: 'temurin'
           java-version: '23'
           cache: sbt
-      - name: Build Linux Arm64
+      - name: Build native binary
         run: |
           ./sbt 'nativeCli/nativeLinkReleaseFast'
-        env:
-          OCI_EXE: docker
