--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -39,12 +39,16 @@ jobs:
         include:
           - os: macos-latest
             arch: arm64
+            name: mac
           - os: ubuntu-latest
             arch: arm64
+            name: linux
           - os: ubuntu-latest
             arch: x64
-          - os: windows-latest
-            arch: x64
+            name: linux
+#          - os: windows-latest
+#            arch: x64
+#            name: windows
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -53,6 +57,24 @@ jobs:
           distribution: 'temurin'
           java-version: '23'
           cache: sbt
+      - name: Set SCALA_VERSION env
+        run: |
+          VERSION=$(cat SCALA_VERSION)
+          echo Version: $SCALA_VERSION
+          echo "SCALA_VERSION=$SCALA_VERSION" >> $GITHUB_ENV
       - name: Build native binary
         run: |
           ./sbt 'nativeCli/nativeLinkReleaseFast'
+      - name: Upload native binary
+        uses: actions/upload-pages-artifact@v4
+        with:
+          name: wvc-${{ matrix.name }}-${{ matrix.arch }}
+          path: wvlet-native-cli/target/scala-${{ env.SCALA_VERSION }}/wvlet-native-cli-release-fast
+  collect_artifact:
+    runs-on: ubuntu-latest
+    needs: build_native
+    steps:
+      - uses: actions/upload-artifact/merge@v4
+        with:
+          name: wvc
+          delete-merged: true
