--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           ./sbt 'nativeCli/nativeLinkReleaseFast'
           cp wvlet-native-cli/target/scala-${{ env.SCALA_VERSION }}/wvlet-native-cli-release-fast \
-          > wvc-${{ matrix.name }}-${{ matrix.arch }}
+          wvc-${{ matrix.name }}-${{ matrix.arch }}
       - name: Upload native binary
         uses: actions/upload-artifact@v4
         with:
