lang (internal #447): Add linkder options

--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -42,7 +42,7 @@ jobs:
 #            arch: arm64
 #            name: mac
 # TODO It seems arm64 is not available yet (2024-11)
-#          - os: ubuntu-latest
+#          - os: ubuntu-rlatest
 #            arch: arm64
 #            name: linux
           - os: ubuntu-latest
