lang (internal): Fix wvc-lib test Makefile

--- a/wvc-lib/Makefile
+++ b/wvc-lib/Makefile
@@ -16,23 +16,25 @@ clean:
 ifeq ($(shell uname),Darwin)
 LIB_DIRS:=$(OUT_DIR):/opt/homebrew/lib:/usr/lib
 RUN_OPTS:=DYLD_LIBRARY_PATH=$(LIB_DIRS):${DYLD_LIBRARY_PATH}
+LIB:=$(OUT_DIR)/libwvlet.dylib
 else
 LIB_DIRS:=$(OUT_DIR)
 RUN_OPTS:=LD_LIBRARY_PATH=$(LIB_DIRS):${LD_LIBRARY_PATH}
+LIB:=$(OUT_DIR)/libwvlet.so
 endif
 
 LIB_NAME:=wvlet
 LINKER_OPTS:=$(addprefix -L, $(subst :, ,$(LIB_DIRS))) -l$(LIB_NAME) -lpthread -lcrypto
 
-$(OUT_DIR)/libwvlet.dylib:
-	../sbt "wvcLib/nativeLink"
+$(LIB):
+	cd .. && ./sbt "wvcLib/nativeLink"
 
 rust: $(TARGET)/test-rust
 	$(RUN_OPTS) $< $(ARGS)
 
-$(TARGET)/test-rust: src/test/rust/test.rs
-	rustc $(LINKER_OPTS) -C target-feature=+crt-static $< -o $@
-
+$(TARGET)/test-rust: src/test/rust/test.rs $(LIB)
+	mkdir -p $(TARGET)
+	rustc $(LINKER_OPTS) $< -o $@
 
 c++: $(TARGET)/test-c++
 	$(RUN_OPTS) $< $(ARGS)
