editor (feature): Import duckdb-wasm

--- a/wvlet-ui-main/package.json
+++ b/wvlet-ui-main/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@duckdb/duckdb-wasm": "^1.29.0",
     "monaco-editor": "^0.52.0",
     "rollup": "^4.27.2"
   },
