--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   build:
-    name: Build Docusaurus
+    name: Build Website
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: ./website
-      - name: Build website
+      - name: Build Docusaurus
         run: npm run build
         working-directory: ./website
       - name: Build playground
@@ -54,7 +54,7 @@ jobs:
       - name: Copy playground web site to website
         run: |
           mkdir -p website/build/playground
-          cp -r wvlet-ui-playground/build website/build/playground
+          cp -r wvlet-ui-playground/dist website/build/playground
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
